--- a/cv1.html
+++ b/cv1.html
@@ -117,7 +117,7 @@
                   </div>
                 </div>
             </div>
-            <button @click="showDiv" >add Custom Section</button>
+            <button @click="showDiv" id="addsec">add Custom Section</button>
             <floating-div v-if="floatingDiv"></floating-div>
             <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
@@ -161,7 +161,7 @@
           </div>
         </div>
       </div>
-      <div class="container-fluid paragraphs">
+      <div class="container-fluid paragraphs" id="paragraphs">
         <div class="row">
           <div class="col-6 left">
             <div class="para">
