--- a/cv1.html
+++ b/cv1.html
@@ -239,6 +239,7 @@
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/vue.js"></script>
+    <script src="js/components.js"></script>
     <script src="js/main.js" ></script>
   </body>
 </html>
