--- a/cv1.html
+++ b/cv1.html
@@ -11,10 +11,36 @@
   </head>
   <body>
 <div id="app">
-  
+  <!-- floatingDiv -->
+
+<div id="floating-div" class="floating-div">
+  <form-group name="section name" v-model="sectionName" :var-name="sectionName"></form-group>
+  <div class="form-group">
+    <label for="sectionList">Location Of Section</label>
+    <select class="form-control" v-model="sectionLocation" id="sectionList">
+      <option v-for="sec in sections">after {{ sec }}</option>
+    </select>
+  </div>
+  <div class="form-group">
+    <label for="sectionStructure">Section Structure</label>
+    <select class="form-control" v-model="sectionStructure" id="sectionList">
+      <option>list only</option>
+      <option>paragraph only</option>
+      <option>list & paragraph</option>
+    </select>
+  </div>
+  <button 
+   onclick="constructSection(app.sectionName, app.sectionLocation, app.sectionStructure)"
+   type="submit" class="btn btn-primary">
+   Add this section</button>
+</div>
+
+
+
+  <!-- floatingDiv -->
     <div class="cvinput">
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="false">
-            <div class="carousel-inner">
+            <div class="carousel-inner" id="carousel-inner">
               <div class="carousel-item active">
                 <div class="test">
                   <h1 onclick="someFunc(this)" varname="informationTitle">Personal Information</h1>
@@ -117,9 +143,7 @@
                   </div>
                 </div>
             </div>
-            <button @click="showDiv" id="addsec">add Custom Section</button>
-
-            <floating-div v-if="floatingDiv"></floating-div>
+            <button onclick="showDiv()" id="addsec">add Custom Section</button>
             
             <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
