--- a/cv1.html
+++ b/cv1.html
@@ -181,9 +181,9 @@
 
       <div class="header container-fluid">
         <div class="row">
-          <div class="col-md-7 personal">
+          <div class="col-7 personal">
             <div class="img">
-              <img src="pics/56468193_2258994747694174_6472742480755294208_n.jpg" alt="">
+              <img src="pics/user.png" alt="">
             </div>
             <div class="name">
               <h4>{{ firstname }}  {{ lastname }}</h4>
@@ -193,7 +193,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-5 info bg-grey">
+          <div class="col-5 info bg-grey">
             <basic-info 
               :address="address"
               :birthday="birthday"
